Fix Safari iOS AJAX and vertical-align problem

--- a/template/src/scss/styles.scss
+++ b/template/src/scss/styles.scss
@@ -309,6 +309,8 @@ body{
 
     background-color: #000;
 
+    line-height: 30px;
+
     animation: fadeInFromNone 500ms ease-in-out;
 
     // Modifiers
@@ -319,9 +321,6 @@ body{
     // Elements
     &__text{
         display: inline-block;
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
 
         color: $default-text-color;
 
